--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "serverStart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "axios": "^1.6.5",
     "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
@@ -18,5 +20,8 @@
     "jade": "~1.11.0",
     "mongoose": "^8.0.4",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
